# SeniorDesignHub

./: SeniorDesignHub.sublime-workspace
Arduino/SensorModule/: SensorModule.ino
Arduino/UARTLoopback/: uart_loopback.ino
Arduino/i2c_loopback/: i2c_loopback.ino  i2c_loopback.ino6900604387234897450.tmp  i2c_loopback.ino7615807023627979708.tmp
CustomSDK/Include/ble/ble_services/: ble_ana.h  ble_conf.h  ble_dig.h  ble_i2c.h  ble_spi.h  ble_uart.h
CustomSDK/Source/ble/ble_services/: ble_ana.c  ble_conf.c  ble_dig.c  ble_i2c.c  ble_spi.c  ble_uart.c
NordicSDK/Include/: simple_uart.h
NordicSDK/Include/ble/ble_services/: ble_uart.h
NordicSDK/Source/ble/ble_services/: ble_uart.c
NordicSDK/Source/simple_uart/: simple_uart.c
NordicSDK/Source/spi_master/: spi_master.c
NordicSDK/Source/twi_master/: twi_sw_master.c
Senior Design Hub/ble_app_template/: SeniorDesignHub.sublime-workspace  ble_app_template.sublime-project  ble_app_template.sublime-workspace  global_config.h  main.c
Senior Design Hub/ble_app_template/arm/: JLinkLog.txt  ble_app_template.uvgui.Will  ble_app_template.uvopt  ble_app_template.uvproj  ble_app_template_nrf51822_xxaa_s110 (256K).dep  myOutput.txt
Senior Design Hub/ble_app_template/arm/_build/: app_button.crf  app_button.d  app_gpiote.crf  app_gpiote.d  app_scheduler.crf  app_scheduler.d  app_timer.crf  app_timer.d  arm_startup_nrf51.d  arm_startup_nrf51.lst  ble_advdata.crf  ble_advdata.d  ble_ana.crf  ble_ana.d  ble_ccs.crf  ble_ccs.d  ble_conf.crf  ble_conf.d  ble_conn_params.crf  ble_conn_params.d  ble_debug_assert_handler.crf  ble_debug_assert_handler.d  ble_dig.crf  ble_dig.d  ble_error_log.crf  ble_error_log.d  ble_flash.crf  ble_flash.d  ble_i2c.crf  ble_i2c.d  ble_snr_des_hub.axf  ble_snr_des_hub.build_log.htm  ble_snr_des_hub.hex  ble_snr_des_hub.htm  ble_snr_des_hub.lnp  ble_snr_des_hub.map  ble_snr_des_hub.sct  ble_snr_des_hub.tra  ble_spi.crf  ble_spi.d  (+16 more)
omegamon/: CMakeLists.txt
omegamon/res/: README  omegamon.qrc  omegamon.rc
omegamon/src/: DeviceConnection.cpp  DeviceConnection.h  DeviceConnectionModel.cpp  DeviceConnectionModel.h  DiscoveredDevice.cpp  DiscoveredDevice.h  DiscoveredDeviceModel.cpp  DiscoveredDeviceModel.h  MainWindow.cpp  MainWindow.h  main.cpp
omegamon/ui/: DeviceConnection.ui  MainWindow.ui
omegasensor/: .project  AndroidManifest.xml  CMakeLists.txt
omegasensor/android/: AndroidManifest.xml
omegasensor/android/src/edu/uccs/omegasensor/: JNI.java  SensorHubAndroid.java
omegasensor/res/: omegasensor.qrc  omegasensor.rc
omegasensor/res/drawable/: selector_ignition.xml
omegasensor/res/layout/: layout_device.xml  layout_devicelist.xml  layout_ignition.xml  layout_scan.xml
omegasensor/res/values/: strings.xml
omegasensor/src/: AddHub.h  Compass.cpp  Config.cpp  Config.h  Driver.cpp  Driver10DOF.cpp  Driver10DOFModel.cpp  Driver10DOFModel.h  Driver10DOFView.cpp  DriverDemo.cpp  DriverDemo.h  DriverDemoModel.cpp  DriverDemoModel.h  DriverDemoView.h  DriverDigital.cpp  DriverDigital.h  DriverI2C.cpp  DriverList.h  DriverUART.h  HubListModel.cpp  HubListModel.h  I2COperationChain.cpp  JNI.cpp  SensorHub.h  SensorHubAndroid.cpp  SensorHubAndroid.h  SensorHubAndroidService.h  SensorHubConfig.cpp  SensorHubService.h  SimpleGraph.h  main.cpp
omegasensor/src/edu/uccs/omegasensor/: BluetoothScanRecord.java  BluetoothService.java  DemoDevice.java  DeviceActivity.java  DeviceAdapter.java  DeviceListActivity.java  IgnitionActivity.java  MainActivity.java  ParticleDevice.java  ScanActivity.java
omegasensor/ui/: AddHub.ui  Driver10DOF.ui  DriverDebugI2C.ui  HubList.ui
omegasensor_pc/: CMakeLists.txt  README  omegasensor_android.pro
omegasensor_pc/android/src/edu/uccs/omegasensor/: SensorHubAndroidService.java
omegasensor_pc/res/: omegasensor.qrc
omegasensor_pc/src/: .ThreadEmit.h.swp  AddHub.cpp  AddHub.h  Compass.cpp  Compass.h  Config.cpp  Config.h  Driver.cpp  Driver.h  Driver10DOF.cpp  Driver10DOF.h  Driver10DOFModel.cpp  Driver10DOFModel.h  Driver10DOFView.cpp  Driver10DOFView.h  DriverAnalog.cpp  DriverAnalog.h  DriverDemo.cpp  DriverDemo.h  DriverDemoModel.cpp  DriverDemoModel.h  DriverDemoView.cpp  DriverDemoView.h  DriverDigital.cpp  DriverDigital.h  DriverI2C.cpp  DriverI2C.h  DriverList.h  DriverSPI.cpp  DriverSPI.h  DriverUART.cpp  DriverUART.h  HubList.cpp  HubList.h  HubListModel.cpp  HubListModel.h  I2COperationChain.cpp  I2COperationChain.h  JNI.cpp  SensorHub.cpp  (+18 more)
omegasensor_pc/ui/: Config.ui  Driver10DOF.ui  DriverDebugUART.ui  DriverDemo.ui
